first dataplot and cleanup

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 </ul>
 </nav>
 <plot>
-<div id="plot" style="width:600px;height:250px;"></div>
-<p> Hallo! </p>
+<div id="plot"></div>
 </plot>
 </section>
 
