--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 </section>
 
 <section>
+<div id="map"></div>
+</section>
+
+<section>
 <nav>
 <ul id="msglist">
 <!-- The item tree will be build here -->
@@ -55,9 +59,11 @@
 
 </section>
 
+
 <script type="text/javascript" src="dataflash.js"></script>
 <script type="text/javascript" src="navbar.js"></script>
 <script type="text/javascript" src="plotly-2.14.0.min.js"></script>
+<script type="text/javascript" src="map.js"></script>
 <script type="text/javascript" src="main.js"></script>
 <script>
 </script>
