--- a/index.html
+++ b/index.html
@@ -17,7 +17,50 @@
 </section>
 
 <section>
-<div id="map"></div>
+<div id="overview">
+     <table style="visibility:true" >
+          <tr>
+               <td>Logging Start</td>
+               <td id="logstart">28-02-2019 17:06</td>
+          </tr>
+          <tr>
+               <td><a href="https://ardupilot.org/plane/docs/logmessages.html#acc">Logging Duration</a></td>
+               <td id="logduration">0:39:45</td>
+          </tr>
+          <tr>
+               <td>Distance</td>
+               <td id="distance">54.34 km</td>
+          </tr>
+          <tr>
+               <td>Max Altitude Difference</td>
+               <td id="maxaltdiff">127 m</td>
+          </tr>
+          <tr>
+               <td>Flight time</td>
+               <td id="flighttime">2 hours 51 minutes 48 seconds</td>
+          </tr>
+          <tr>
+               <td>Average Speed</td>
+               <td id="avgspeed">81.7 km/h</td>
+          </tr>
+          <tr>
+               <td>Maximum Speed</td>
+               <td id="maxspeed">112.4 km/h</td>
+          </tr>
+          <tr>
+               <td>Maximum Speed Up</td>
+               <td id="maxupspeed">39.7 km/h</td>
+          </tr>
+          <tr>
+               <td>Maximum Speed Down</td>
+               <td id="maxdownspeed">24.5 km/h</td>
+          </tr>
+     </table>
+</div>
+</section>
+
+<section>
+     <div id="map"></div>
 </section>
 
 <section>
