accept .bin and .BIN files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <tr>
           <td>
                <p> Drag&Drop your dataflash *.bin file here!
-                    <input type="file" id="files" name="file" accept=".bin" onchange="handle_onfilechange(event)">
+                    <input type="file" id="files" name="file" accept=".bin,.BIN" onchange="handle_onfilechange(event)">
                     </input>
                </p>
           </td>
